k8s-deployment-proweb-bc-prd.yaml
#apiVersion: v1
#kind: PersistentVolume
#metadata:
#  name: proweb-bc-prd-nas
#  labels:
#    alicloud-pvname: proweb-bc-prd-nas
#spec:
#  storageClassName: nas
#  capacity:
#    storage: 100Gi
#  accessModes:
#    - ReadWriteMany
#  flexVolume:
#    driver: "alicloud/nas"
#    options:
#      server: "1262fe4b779-rty43.cn-hongkong.nas.aliyuncs.com"
#      path: "/"
#      vers: "4.0"
#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: proweb-bc-prd-nas-pvc
#  namespace: proweb-bc-prd-ns
#spec:
#  storageClassName: nas
#  accessModes:
#    - ReadWriteMany
#  resources:
#    requests:
#      storage: 100Gi
#  selector:
#    matchLabels:
#      alicloud-pvname: proweb-bc-prd-nas
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proweb-bc-prd
  namespace: proweb-bc-prd-ns
  labels:
    app: proweb-bc-prd
    Environment: prd
    Owner: DigitalChannels
    ProjectName: bisneycrest
spec:
  replicas: 1
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 0
  selector:
    matchLabels:
      app: proweb-bc-prd
  template:
    metadata:
      annotations:
        k8s.aliyun.com/eci-sls-enable: "true"
        k8s.aliyun.com/acr-service-arns: "acs:ram::5725926127090411:role/k8s-prd-acr-access"
      labels:
        app: proweb-bc-prd
    spec:
      containers:
      - name: proweb-bc-prd
        image: proweb-acr-registry-vpc.cn-hongkong.cr.aliyuncs.com/proweb-prd/proweb-bc-prd-acr-repo:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "1024Mi"  # Initial memory request
            cpu: "256m"       # Initial CPU request
          limits:
            memory: "1024Mi"  # Maximum memory allowed
            cpu: "256m"       # Maximum CPU allowed
        volumeMounts:
        - name: proweb-bc-prd-oss-pvc
          mountPath: "/var/bisneycrest/public_html/upload"
        # - name: proweb-bc-prd-nas-pvc
        #   mountPath: "/var/bisneycrest/public_html/upload"
      volumes:
      - name: proweb-bc-prd-oss-pvc
        persistentVolumeClaim:
          claimName: proweb-bc-prd-oss-pvc
      # - name: proweb-bc-prd-nas-pvc
      #   persistentVolumeClaim:
      #     claimName: proweb-bc-prd-nas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: proweb-bc-prd-service
  namespace: proweb-bc-prd-ns
  labels:
    app: proweb-bc-prd-service
spec:
  selector:
    app: proweb-bc-prd
  sessionAffinity: None
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proweb-bc-prd-ingress
  namespace: proweb-bc-prd-ns
  labels:
    ingress: proweb-bc-prd-ingress
  annotations:
    alb.ingress.kubernetes.io/healthcheck-enabled: "true"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/healthcheck-httpversion: "HTTP1.1"
    alb.ingress.kubernetes.io/healthcheck-method: "HEAD"
    alb.ingress.kubernetes.io/healthcheck-code: "http_2xx,http_3xx"
    alb.ingress.kubernetes.io/healthcheck-httpcode: "http_2xx,http_3xx"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthy-threshold-count: "3"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/healthcheck-connect-port: "80"
spec:
  ingressClassName: k8s-alb-https
  rules:
    - host: www.bisneycrest.com.hk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proweb-bc-prd-service
              port:
                number: 443
  tls:
  - hosts: 
    - www.bisneycrest.com.hk
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-any-any
  namespace: proweb-bc-prd-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - {}
